# flowengine

./: .dockerignore  Cargo.toml  Dockerfile  README.md  test.sh
.github/: dependabot.yml
crates/flowcli/: Cargo.toml
crates/flowcli/src/: main.rs
crates/flowcore/: Cargo.toml
crates/flowcore/src/: error.rs  lib.rs  node.rs  value.rs  workflow.rs
crates/flowcore/src/events/: base.rs  iggy_bus.rs  mod.rs
crates/flowcore/tests/: iggy_integration_test.rs
crates/flownodes/: Cargo.toml
crates/flownodes/src/: api_call.rs  browser.rs  debug.rs  docker.rs  docker_v2.rs  http.rs  lib.rs  shell.rs  time.rs  transform.rs  zypi.rs  zypi_grpc.rs
crates/flownodes/src/docker/: base.rs  factory.rs
crates/flownodes/tests/: docker_test.rs  dockerv2_test.rs
crates/flowpersist/: Cargo.toml
crates/flowpersist/src/: lib.rs
crates/flowproto/: Cargo.toml  build.rs
crates/flowproto/src/: lib.rs
crates/flowruntime/: Cargo.toml
crates/flowruntime/src/: executor.rs  lib.rs  loader.rs  registry.rs  runtime.rs
crates/flowserver/: Cargo.toml
crates/flowserver/src/: grpc_server.rs  main.rs
docs/: ACTIX_SERVER_COMPLETE.md  ARCHITECTURE_DIAGRAM.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  NEXT_STEPS.md  PHASE_PLAN.md  PROJECT_SUMMARY.md  SERVER_QUICKSTART.md  api.md  architecture.md  node_development.md
examples/: browser_inline_html.json  browser_render.json  data_pipeline.json  docker_data_processing.json  docker_dynamic_dag.json  docker_ml_inference.json  docker_python_io.json  docker_text_processing.json  flat-dockerv2.json  github_zen.json  mixed_shell_zypi.json  retry_backoff_demo.json  shell_pipeline.json  streaming_demo.json  zypi_file_injection.json  zypi_parallel.json  zypi_sandbox.json
examples/integrations/: airtable_list_records.json  atlassian_jira_issues.json  discord_send_webhook.json  github_list_issues.json  gmail_send.json  google_sheets_read.json  hubspot_contacts.json  notion_query_database.json  slack_post_message.json  stripe_list_customers.json  trello_list_cards.json
proto/: flowengine.proto  zypi.proto
python/: README.md  pyproject.toml
python/examples/: integration_demo.py
python/flowengine/: __init__.py  client.py  flow.py  sandbox.py  task.py  types.py
tests/: server.output.txt
