[workspace]
members = [
    "crates/flowcore",
    "crates/flowpersist",
    "crates/flowruntime",
    "crates/flownodes",
    "crates/flowserver",
    "crates/flowcli",
    "crates/flowproto",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
petgraph = "0.6"
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
