[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "flowengine"
version = "0.1.0"
description = "FlowEngine Python SDK — Fast, lightweight workflow orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "FlowEngine Authors"}]
keywords = ["workflow", "orchestration", "sandbox", "firecracker", "prefect"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.28",
    "pydantic>=2.0",
]

[project.optional-dependencies]
sandbox = ["flowengine[zypi]"]
zypi = []
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/your-org/flowengine"
