[package]
name = "flowcli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "flow"
path = "src/main.rs"

[dependencies]
flowcore = { path = "../flowcore" }
flowruntime = { path = "../flowruntime" }
flownodes = { path = "../flownodes" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
