[package]
name = "flownodes"
version = "0.1.0"
edition = "2021"

[dependencies]
flowcore = { path = "../flowcore" }
flowruntime = { path = "../flowruntime" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
