[package]
name = "flownodes"
version = "0.1.0"
edition = "2021"

[dependencies]
flowcore = { path = "../flowcore" }
flowruntime = { path = "../flowruntime" }
flowproto = { path = "../flowproto" }
tonic = { workspace = true }
prost = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
tokio-util = "0.7.17"
uuid.workspace = true
