[package]
name = "flowpersist"
version = "0.1.0"
edition = "2021"

[dependencies]
flowcore = { path = "../flowcore" }
flowruntime = { path = "../flowruntime" }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
