[package]
name = "flowruntime"
version = "0.1.0"
edition = "2021"

[dependencies]
flowcore = { path = "../flowcore" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
tokio-util = "0.7.17"
