[package]
name = "flowserver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "flowserver"
path = "src/main.rs"

[dependencies]
flowcore = { path = "../flowcore" }
flowruntime = { path = "../flowruntime" }
flownodes = { path = "../flownodes" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Actix web framework
actix-web = "4.4"
actix-cors = "0.7"
actix-ws = "0.2"
