[package]
name = "flowserver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "flowserver"
path = "src/main.rs"

[dependencies]
flowcore = { path = "../flowcore" }
flowruntime = { path = "../flowruntime" }
flownodes = { path = "../flownodes" }
flowproto = { path = "../flowproto" }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio-stream = "0.1"

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Actix web framework
actix-web = "4.4"
actix-cors = "0.7"
actix-ws = "0.2"

# OpenAPI / Swagger
utoipa = { version = "5", features = ["actix_extras", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
